JOORSAND/src/objects/Dependency_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlled_Field_API_Name__c</fullName>
        <label>Controlled Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_API_Name__c</fullName>
        <label>Dependent Field API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dependency Settings</label>
    <pluralLabel>Dependency Settings</pluralLabel>
</CustomObject>